Add svg as an image

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href="TCCl-20221-IgnacioUseche.svg" download="">Descargar</a></li>
-            <li><a href="">Acerca de</a></li>
-            <li><a href="#Info">Info</a></li>
+            <a href="TCCl-20221-IgnacioUseche.svg" download=""><li>Descargar</li></a>
+            <a href=""><li>Acerca de</li></a>
+            <a href="#Info"><li>Info</li></a>
         </ul>
     </nav>
     <main>
-        <p style="height: 2000px;"></p>
         <div class="svgContainer">
-            Aca va la imagen    
+	  <img src="TCCl-20221-IgnacioUseche.svg" />
         </div>
     </main>
     <footer id="Info">
@@ -42,7 +41,7 @@
                 <br />
                 Tlf:
                 <br />
-                +58 414-7101488
+                <a href="tel:+584247101488">+58 424-7101488</a>
                 <br />
             </p>
 
